--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^9.0.0",
     "mssql": "^12.1.1",
     "multer": "^1.4.5-lts.1",
+    "react-hot-toast": "^2.6.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
