--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/serialize": "^1.3.3",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.6",
+    "@mui/lab": "^7.0.1-beta.20",
+    "@mui/material": "^7.3.6",
     "@types/three": "^0.181.0",
+    "date-fns": "^4.1.0",
     "next": "16.0.7",
     "qrcode.react": "^4.2.0",
     "react": "19.2.0",
