--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^7.3.6",
     "@types/three": "^0.181.0",
     "date-fns": "^4.1.0",
+    "exifr": "^7.1.3",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.562.0",
